# Dithering

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: Dither.hpp  MonochromDither.hpp  Types.hpp
src/: Dither.cpp  MonochromDither.cpp
